--- a/cn/index.html
+++ b/cn/index.html
@@ -35,11 +35,9 @@
 		<div class="container">
     		<div class="blurb">
     			<div style="float:right; width:400px; height:286px; box-shadow: 6px 8px 12px #888888;">
-				<img src="../img/grade1_zz.jpg" alt="" width="400" />
+				<img src="../img/selfie.jpg" alt="" width="400" />
 			</div>
         		<h1>曾植</h1>
-			<p>中山大学物理学院物理系2020级本科生</p>
-			<p><a href="https://baike.baidu.com/item/%E5%9F%BA%E7%A1%80%E5%AD%A6%E7%A7%91%E6%8B%94%E5%B0%96%E5%AD%A6%E7%94%9F%E5%9F%B9%E5%85%BB%E8%AE%A1%E5%88%922.0%E5%9F%BA%E5%9C%B0/53704775?fr=aladdin" target="_blank">基础学科拔尖学生培养计划2.0基地</a>成员</p>
 			<p>电子邮箱：zeng9245@gmail.com</p>
 			
 			
@@ -48,14 +46,15 @@
 		<br>
 		<h2>科研方向</h2>
 		<ul>
-			<li>非平衡统计物理，相变与临界现象，复杂系统</li>
-			<li>凝聚态理论，量子信息，量子多体系统</li>
-			<li>量子蒙特卡洛，机器学习</li>
+			<li>量子信息、量子计算、量子模拟</li>
+			<li>量子相变，非平衡统计物理</li>
+			<li>量子蒙特卡洛</li>
 		</ul>
 		<br>
 		<h2>履历</h2>
 		<ul>
-			<li>2020 年 9 月至今：<a href="https://spe.sysu.edu.cn" target="_blank">中山大学物理学院</a>物理系本科在读</li>
+			<li>2020 年 9 月至 2024 年 6 月：<a href="https://spe.sysu.edu.cn" target="_blank">中山大学物理学院</a>物理学学士学位，<a href="https://baike.baidu.com/item/%E5%9F%BA%E7%A1%80%E5%AD%A6%E7%A7%91%E6%8B%94%E5%B0%96%E5%AD%A6%E7%94%9F%E5%9F%B9%E5%85%BB%E8%AE%A1%E5%88%922.0%E5%9F%BA%E5%9C%B0/53704775?fr=aladdin" target="_blank">基础学科拔尖学生培养计划2.0基地</a>成员</li>
+			<li>2024 年 9 月至今：<a href="https://spe.sysu.edu.cn" target="_blank">伦敦帝国理工</a>物理学硕士在读</li>
 		</ul>
 		<br>
 		<h2>语言</h2>
@@ -67,7 +66,9 @@
 		<!--这个叹号杠杠的作用好像是注释-->
 		<h2>学术论文</h2>
 		<ul>
-			<li>Yin-Kai Yu, Zhi Zeng, Yu-Rong Shu, Zi-Xiang Li, Shuai Yin. Nonequilibrium dynamics in Dirac quantum criticality. 2023. arXiv: 2310.10601.</li>
+			<li>Zhi Zeng, Yin-Kai Yu,  Zi-Xiang Li, Shuai Yin. Nonequilibrium Critical Dynamics with Emergent Supersymmetry 2024. <a href="https://arxiv.org/abs/2408.06138" target="_blank">arXiv: 2408.06138</a>.</li>
+			<li>Zhi Zeng, Yin-Kai Yu, Zhi-Xuan Li, Zi-Xiang Li, Shuai Yin. Finite-time Scaling beyond the Kibble-Zurek Prerequisite: Driven Critical Dynamics in Strongly Interacting Dirac Systems. 2024. <a href="https://arxiv.org/abs/2403.19258" target="_blank">arXiv: 2403.19258</a>.</li>
+			<li>Yin-Kai Yu, Zhi Zeng, Yu-Rong Shu, Zi-Xiang Li, Shuai Yin. Nonequilibrium dynamics in Dirac quantum criticality. 2023. <a href="https://arxiv.org/abs/2310.10601" target="_blank">arXiv: 2310.10601</a>.</li>
 		</ul>
 			
 	</body>
