--- a/cn/undergraduate.html
+++ b/cn/undergraduate.html
@@ -29,12 +29,13 @@
 		<h1>科研</h1>
 		<h3>科研经历</h3>
 		<ul>
-			<li>2023 年 9 月至今：研究超对称量子临界点上的临界虚时驱动动力学</li>
-			<li>2021 年 7 月至 2023 年 7 月：研究属于Gross-Neveu-Yukawa普适类的狄拉克费米子系统的临界虚时驱动动力学</li>
-			<li style="margin-bottom: 30px;">2021 年 7 月至 2023 年 1 月：研究属于chiral Heisenberg普适类的狄拉克费米子系统的临界虚时弛豫动力学</li>
+			<li>2023 年 9 月至 2024 年 7 月：研究具有演生时空超对称性的量子临界点上的虚时驱动动力学</li>
+			<li>2021 年 7 月至 2023 年 7 月：研究蜂窝晶格中Hubbard模型和无自旋t-V模型的临界虚时驱动动力学，其量子相变属于Gross-Neveu-Yukawa普适类</li>
+			<li style="margin-bottom: 30px;">2021 年 7 月至 2023 年 1 月：研究蜂窝晶格中Hubbard模型的临界虚时弛豫动力学，其量子相变属于chiral Heisenberg普适类</li>
 		</ul>
 		<h3>学术交流</h3>
 		<ul>
+			<li>2024 年 4 月 11 日至 2024 年 4 月 15 日：参加第十一届量子多体计算会议</a>，展示了超越传统Kibble-Zurek下的狄拉克费米子系统的临界虚时驱动动力学结果，并与同行交流</li>
 			<li>2023 年 7 月 26 日至 2023 年 7 月 28 日：参加<a href="https://conferences.koushare.com/spcsc2023" target="_blank">第七届全国统计物理与复杂系统学术会议</a>，展示了GNY普适类的驱动动力学的<a href="../doc/v1.Driven Critical Dynamics in Gross-Neveu-Yukawa Universality Class.pdf" target="_blank"><b>部分结果</b></a>并与同行交流</li>
 			<li style="margin-bottom: 30px;">2022 年 7 月 22 日至 2022 年 7 月 30 日：访问<a href="http://www.iop.cas.cn" target="_blank">中国科学院物理研究所</a>，讨论程序和进展</li>
 		</ul>
