--- a/cn/index.html
+++ b/cn/index.html
@@ -34,7 +34,7 @@
 		<br>
 		<div class="container">
     		<div class="blurb">
-    			<div style="float:right; width:400px; height:286px; box-shadow: 6px 8px 12px #888888;">
+    			<div style="float:right; width:360px; height:270px; ">
 				<img src="../img/2408selfie.jpg" alt="" width="400" />
 			</div>
         		<h1>曾植</h1>
@@ -53,8 +53,8 @@
 		<br>
 		<h2>履历</h2>
 		<ul>
-			<li>2020 年 9 月至 2024 年 6 月：<a href="https://spe.sysu.edu.cn" target="_blank">中山大学物理学院</a>物理学学士学位，<a href="https://baike.baidu.com/item/%E5%9F%BA%E7%A1%80%E5%AD%A6%E7%A7%91%E6%8B%94%E5%B0%96%E5%AD%A6%E7%94%9F%E5%9F%B9%E5%85%BB%E8%AE%A1%E5%88%922.0%E5%9F%BA%E5%9C%B0/53704775?fr=aladdin" target="_blank">基础学科拔尖学生培养计划2.0基地</a>成员</li>
-			<li>2024 年 9 月至今：<a href="https://www.imperial.ac.uk/physics" target="_blank">帝国理工物理系</a>量子动力学物理学硕士在读</li>
+			<li>2020 年 9 月至 2024 年 6 月：<a href="https://spe.sysu.edu.cn" target="_blank">中山大学物理学院</a>物理学学士，<a href="https://baike.baidu.com/item/%E5%9F%BA%E7%A1%80%E5%AD%A6%E7%A7%91%E6%8B%94%E5%B0%96%E5%AD%A6%E7%94%9F%E5%9F%B9%E5%85%BB%E8%AE%A1%E5%88%922.0%E5%9F%BA%E5%9C%B0/53704775?fr=aladdin" target="_blank">基础学科拔尖学生培养计划2.0基地</a>成员</li>
+			<li>2024 年 9 月至 2025 年 9 月：<a href="https://www.imperial.ac.uk/physics" target="_blank">帝国理工物理系</a>量子动力学物理学硕士</li>
 		</ul>
 		<br>
 		<h2>语言</h2>
