--- a/cn/index.html
+++ b/cn/index.html
@@ -34,8 +34,8 @@
 		<br>
 		<div class="container">
     		<div class="blurb">
-    			<div style="float:right; width:360px; height:270px; ">
-				<img src="../img/2408selfie.jpg" alt="" width="400" />
+    			<div style="float:right; width:400px; height:200px; ">
+				<img src="../img/2409Yunnan_edited.jpg" alt="" width="400" />
 			</div>
         		<h1>曾植</h1>
 			<p>电子邮箱：zeng9245@gmail.com</p>
