--- a/cn/index.html
+++ b/cn/index.html
@@ -34,7 +34,7 @@
 		<br>
 		<div class="container">
     		<div class="blurb">
-    			<div style="float:right; width:400px; height:200px; ">
+    			<div style="float:right; width:400px; height:400px; ">
 				<img src="../img/2409Yunnan_edited.jpg" alt="" width="400" />
 			</div>
         		<h1>曾植</h1>
@@ -64,7 +64,7 @@
 		</ul>
 		<br>
 		<!--这个叹号杠杠的作用好像是注释-->
-		<h2>学术论文</h2>
+		<h2>学术论文/预印</h2>
 		<ul>
 			<li>Zhi Zeng, Yin-Kai Yu,  Zi-Xiang Li, Shuai Yin. Nonequilibrium Critical Dynamics with Emergent Supersymmetry 2024. <a href="https://arxiv.org/abs/2408.06138" target="_blank">arXiv: 2408.06138</a>.</li>
 			<li>Zhi Zeng, Yin-Kai Yu, Zhi-Xuan Li, Zi-Xiang Li, Shuai Yin. Finite-time Scaling beyond the Kibble-Zurek Prerequisite: Driven Critical Dynamics in Strongly Interacting Dirac Systems. 2024. <a href="https://arxiv.org/abs/2403.19258" target="_blank">arXiv: 2403.19258</a>.</li>
