--- a/en/index.html
+++ b/en/index.html
@@ -26,8 +26,8 @@
 		<br>
 		<div class="container">
     		<div class="blurb">
-    			<div style="float:right; width:400px; height:286px; box-shadow: 6px 8px 12px #888888;">
-				<img src="../img/grade1_zz.jpg" alt="" width="400" />
+    			<div style="float:right; width:400px; height:400px; ">
+				<img src="../img/2409Yunnan_edited.jpg" alt="" width="400" />
 			</div>
         		<h1>Zhi Zeng</h1>
 			<p>Undergraduate student, School of Physics, Sun Yat-Sen University, Guangzhou</p>
