--- a/en/index.html
+++ b/en/index.html
@@ -27,7 +27,7 @@
 		<div class="container">
     		<div class="blurb">
     			<div style="float:right; width:400px; height:400px; ">
-				<img src="../img/2409Yunnan_edited.jpg" alt="" width="400" />
+				<img src="../img/2408selfie.jpg" alt="" width="200" />
 			</div>
         		<h1>Zhi Zeng</h1>
 			<p>Undergraduate student, School of Physics, Sun Yat-Sen University, Guangzhou</p>
