--- a/en/index.html
+++ b/en/index.html
@@ -30,8 +30,6 @@
 				<img src="../img/2409Yunnan_edited.jpg" alt="" width="300" />
 			</div>
         		<h1>Zhi Zeng</h1>
-			<p>Undergraduate student, School of Physics, Sun Yat-Sen University, Guangzhou</p>
-			<p>Member of <a href="https://baike.baidu.com/item/%E5%9F%BA%E7%A1%80%E5%AD%A6%E7%A7%91%E6%8B%94%E5%B0%96%E5%AD%A6%E7%94%9F%E5%9F%B9%E5%85%BB%E8%AE%A1%E5%88%922.0%E5%9F%BA%E5%9C%B0/53704775?fr=aladdin" target="_blank">the Top-notch Student Training Program 2.0 Base for Basic Disciplines</a></p>
 			<p>Email：zeng9245@gmail.com</p>
 			
 			
@@ -47,7 +45,7 @@
 		<br>
 		<h2>Education</h2>
 		<ul>
-			<li>9/2020-present：Undergraduate student, <a href="https://spe.sysu.edu.cn" target="_blank">School of Physics, Sun Yat-Sen University</a>, Guangzhou</li>
+			<li>9/2020-6/2024：Undergraduate student, <a href="https://spe.sysu.edu.cn" target="_blank">School of Physics, Sun Yat-Sen University</a>, Guangzhou. Member of <a href="https://baike.baidu.com/item/%E5%9F%BA%E7%A1%80%E5%AD%A6%E7%A7%91%E6%8B%94%E5%B0%96%E5%AD%A6%E7%94%9F%E5%9F%B9%E5%85%BB%E8%AE%A1%E5%88%922.0%E5%9F%BA%E5%9C%B0/53704775?fr=aladdin" target="_blank">the Top-notch Student Training Program 2.0 Base for Basic Disciplines</a></li>
 		</ul>
 		<br>
 		<h2>Language</h2>
