--- a/en/index.html
+++ b/en/index.html
@@ -45,7 +45,8 @@
 		<br>
 		<h2>Education</h2>
 		<ul>
-			<li>9/2020-6/2024：Undergraduate student, <a href="https://spe.sysu.edu.cn" target="_blank">School of Physics, Sun Yat-Sen University</a>, Guangzhou. Member of <a href="https://baike.baidu.com/item/%E5%9F%BA%E7%A1%80%E5%AD%A6%E7%A7%91%E6%8B%94%E5%B0%96%E5%AD%A6%E7%94%9F%E5%9F%B9%E5%85%BB%E8%AE%A1%E5%88%922.0%E5%9F%BA%E5%9C%B0/53704775?fr=aladdin" target="_blank">the Top-notch Student Training Program 2.0 Base for Basic Disciplines</a></li>
+			<li>9/2020-6/2024：Bachelor of Science in Physics, <a href="https://spe.sysu.edu.cn" target="_blank">School of Physics, Sun Yat-Sen University</a>, Guangzhou. Member of <a href="https://baike.baidu.com/item/%E5%9F%BA%E7%A1%80%E5%AD%A6%E7%A7%91%E6%8B%94%E5%B0%96%E5%AD%A6%E7%94%9F%E5%9F%B9%E5%85%BB%E8%AE%A1%E5%88%922.0%E5%9F%BA%E5%9C%B0/53704775?fr=aladdin" target="_blank">the Top-notch Student Training Program 2.0 Base for Basic Disciplines</a></li>
+			<li>2024 年 9 月至 2025 年 9 月：<a href="https://www.imperial.ac.uk/physics" target="_blank">帝国理工物理系</a>量子动力学物理学硕士</li>
 		</ul>
 		<br>
 		<h2>Language</h2>
@@ -54,13 +55,14 @@
 			<li>English(IELTS-7.5，GRE-V153Q170)</li>
 		</ul>
 		<br>
-		
-		
+
 		<!--<h2>Publications (<a href="https://inspirehep.net/authors/1273414?ui-citation-summary=true" target="_blank">INSPIRE-HEP link</a>)</h2>-->
 		<!--<h2>Publications (<a href="https://inspirehep.net/literature?sort=mostrecent&size=25&page=1&q=ea%20yu%2C%20zhao-huan&ui-citation-summary=true" target="_blank">INSPIRE-HEP link</a>)</h2>-->
-		<h2>Publications</h2>
+		<h2>Publications/Preprints</h2>
 		<ul>
-			<li>Yin-Kai Yu, Zhi Zeng, Yu-Rong Shu, Zi-Xiang Li, Shuai Yin. Nonequilibrium dynamics in Dirac quantum criticality. 2023. arXiv: 2310.10601.</li>
+			<li>Zhi Zeng, Yin-Kai Yu,  Zi-Xiang Li, Shuai Yin. Nonequilibrium Critical Dynamics with Emergent Supersymmetry 2024. <a href="https://arxiv.org/abs/2408.06138" target="_blank">arXiv: 2408.06138</a>.</li>
+			<li>Zhi Zeng, Yin-Kai Yu, Zhi-Xuan Li, Zi-Xiang Li, Shuai Yin. Finite-time Scaling beyond the Kibble-Zurek Prerequisite: Driven Critical Dynamics in Strongly Interacting Dirac Systems. 2024. <a href="https://arxiv.org/abs/2403.19258" target="_blank">arXiv: 2403.19258</a>.</li>
+			<li>Yin-Kai Yu, Zhi Zeng, Yu-Rong Shu, Zi-Xiang Li, Shuai Yin. Nonequilibrium dynamics in Dirac quantum criticality. 2023. <a href="https://arxiv.org/abs/2310.10601" target="_blank">arXiv: 2310.10601</a>.</li>
 		</ul>
 		<ol>
 		</ol>
