--- a/en/index.html
+++ b/en/index.html
@@ -38,15 +38,15 @@
 		<br>
 		<h2>Research Interests</h2>
 		<ul>
-			<li>nonequilibrium statistical physics, phase transition and critical phenomena, complex systems</li>
-			<li>condensed matter theory, quantum information, quantum many-body systems</li>
-			<li>quantum Monte Carlo，machine learning</li>
+			<li>quantum information, quantum computing</li>
+			<li>quantum phase transition, nonequilibrium statistical physics</li>
+			<li>numerical simulation (quantum Monte Carlo，machine learning) and quantum simulation in quantum many-body systems</li>
 		</ul>
 		<br>
 		<h2>Education</h2>
 		<ul>
-			<li>9/2020-6/2024：Bachelor of Science in Physics, <a href="https://spe.sysu.edu.cn" target="_blank">School of Physics, Sun Yat-Sen University</a>, Guangzhou. Member of <a href="https://baike.baidu.com/item/%E5%9F%BA%E7%A1%80%E5%AD%A6%E7%A7%91%E6%8B%94%E5%B0%96%E5%AD%A6%E7%94%9F%E5%9F%B9%E5%85%BB%E8%AE%A1%E5%88%922.0%E5%9F%BA%E5%9C%B0/53704775?fr=aladdin" target="_blank">the Top-notch Student Training Program 2.0 Base for Basic Disciplines</a></li>
-			<li>2024 年 9 月至 2025 年 9 月：<a href="https://www.imperial.ac.uk/physics" target="_blank">帝国理工物理系</a>量子动力学物理学硕士</li>
+			<li>09/2020-06/2024：BSc in Physics, <a href="https://spe.sysu.edu.cn" target="_blank">School of Physics, Sun Yat-Sen University</a>, Guangzhou. Member of <a href="https://baike.baidu.com/item/%E5%9F%BA%E7%A1%80%E5%AD%A6%E7%A7%91%E6%8B%94%E5%B0%96%E5%AD%A6%E7%94%9F%E5%9F%B9%E5%85%BB%E8%AE%A1%E5%88%922.0%E5%9F%BA%E5%9C%B0/53704775?fr=aladdin" target="_blank">the Top-notch Student Training Program 2.0 Base for Basic Disciplines</a></li>
+			<li>09/2024-09/2025：MSc in Physcis with Quantum Dynamics <a href="https://www.imperial.ac.uk/physics" target="_blank">Department of Physics, Imperial College London</a></li>
 		</ul>
 		<br>
 		<h2>Language</h2>
