--- a/cn/index.html
+++ b/cn/index.html
@@ -46,9 +46,9 @@
 		<br>
 		<h2>科研方向</h2>
 		<ul>
-			<li>量子信息、量子计算、量子模拟</li>
+			<li>量子信息、量子计算</li>
 			<li>量子相变，非平衡统计物理</li>
-			<li>量子蒙特卡洛</li>
+			<li>对量子多体系统的数值模拟(量子蒙特卡洛)和量子模拟</li>
 		</ul>
 		<br>
 		<h2>履历</h2>
