--- a/en/index.html
+++ b/en/index.html
@@ -40,7 +40,7 @@
 		<ul>
 			<li>quantum information, quantum computing</li>
 			<li>quantum phase transition, nonequilibrium statistical physics</li>
-			<li>numerical simulation (quantum Monte Carlo，machine learning) and quantum simulation in quantum many-body systems</li>
+			<li>numerical simulation (quantum Monte Carlo) and quantum simulation in quantum many-body systems</li>
 		</ul>
 		<br>
 		<h2>Education</h2>
