--- a/en/index.html
+++ b/en/index.html
@@ -60,9 +60,9 @@
 		<!--<h2>Publications (<a href="https://inspirehep.net/literature?sort=mostrecent&size=25&page=1&q=ea%20yu%2C%20zhao-huan&ui-citation-summary=true" target="_blank">INSPIRE-HEP link</a>)</h2>-->
 		<h2>Publications/Preprints</h2>
 		<ul>
-			<li>Zhi Zeng, Yin-Kai Yu,  Zi-Xiang Li, Shuai Yin. Nonequilibrium Critical Dynamics with Emergent Supersymmetry 2024. <a href="https://arxiv.org/abs/2408.06138" target="_blank">arXiv: 2408.06138</a>.</li>
-			<li>Zhi Zeng, Yin-Kai Yu, Zhi-Xuan Li, Zi-Xiang Li, Shuai Yin. Finite-time Scaling beyond the Kibble-Zurek Prerequisite: Driven Critical Dynamics in Strongly Interacting Dirac Systems. 2024. <a href="https://arxiv.org/abs/2403.19258" target="_blank">arXiv: 2403.19258</a>.</li>
-			<li>Yin-Kai Yu, Zhi Zeng, Yu-Rong Shu, Zi-Xiang Li, Shuai Yin. Nonequilibrium dynamics in Dirac quantum criticality. 2023. <a href="https://arxiv.org/abs/2310.10601" target="_blank">arXiv: 2310.10601</a>.</li>
+			<li><b>Zhi Zeng</b>, Yin-Kai Yu,  Zi-Xiang Li, Shuai Yin. Nonequilibrium Critical Dynamics with Emergent Supersymmetry 2024. <a href="https://arxiv.org/abs/2408.06138" target="_blank">arXiv: 2408.06138</a>.</li>
+			<li><b>Zhi Zeng</b>, Yin-Kai Yu, Zhi-Xuan Li, Zi-Xiang Li, Shuai Yin. Finite-time Scaling beyond the Kibble-Zurek Prerequisite: Driven Critical Dynamics in Strongly Interacting Dirac Systems. 2024. <a href="https://arxiv.org/abs/2403.19258" target="_blank">arXiv: 2403.19258</a>.</li>
+			<li>Yin-Kai Yu, <b>Zhi Zeng</b>, Yu-Rong Shu, Zi-Xiang Li, Shuai Yin. Nonequilibrium dynamics in Dirac quantum criticality. 2023. <a href="https://arxiv.org/abs/2310.10601" target="_blank">arXiv: 2310.10601</a>.</li>
 		</ul>
 		<ol>
 		</ol>
