--- a/en/undergraduate.html
+++ b/en/undergraduate.html
@@ -23,18 +23,19 @@
 		</div>
 		<br>
 		<script src="nav.js"></script>
-		<br>		
+		<br>
 		<h1>Research</h1>
 		<h3>Research Experience</h3>
 		<ul>
-			<li>9/2023-present: &nbsp;Research on nonequilibrium dynamics in supersymmetry quantum criticality</li>
-			<li>7/2021-7/2023: &nbsp;Research on driven critical dynamics of Dirac fermions system in Gross-Neveu-Yukawa universality class</li>
-			<li style="margin-bottom: 30px;">7/2021-1/2023: &nbsp;Research on imaginary-time relaxation dynamics of Dirac fermions system in chiral Heisenberg universality class</li>
+			<li>09/2023-07/2024: &nbsp;Research on nonequilibrium dynamics in superconducting quantum critical point with emergent spacetime supersymmetry</li>
+			<li>07/2021-07/2023: &nbsp;Research on imaginary-time driven critical dynamics in Honeycomb Hubbard model and spinless t-V model, whose criticalities belong to Gross-Neveu-Yukawa universality class</li>
+			<li style="margin-bottom: 30px;">07/2021-01/2023: &nbsp;Research on imaginary-time relaxation dynamics in Honeycomb Hubbard model, whose criticality belongs to chiral Heisenberg universality class</li>
 		</ul>
 		<h3>Academic Communication</h3>
 		<ul>
-			<li>7/26/2023-7/28/2023: &nbsp;I attended <a href="https://conferences.koushare.com/spcsc2023" target="_blank">the 7th National Conference on Statistical Physics and Complex Systems</a>. There I presented some of our <a href="../doc/v1.Driven Critical Dynamics in Gross-Neveu-Yukawa Universality Class.pdf" target="_blank"><b>results</b></a> of driven critical dynamics in Gross-Neveu-Yukawa universality class and discussed them with academic peers.</li>
-			<li style="margin-bottom: 30px;">7/22/2022-7/30/2022: &nbsp;I visited <a href="http://www.iop.cas.cn" target="_blank">Institute of Physics, Chinese Academy of Sciences</a>, to study the fermions quantum Monte Carlo algorithm and programs and discuss the progress of QMC simulation.</li>
+			<li>11/04/2024-15/04/2024：I attended the 12th Workshop on Quantum Many-Body Computation</a>，and presented results of driven critical dynamics in Dirac fermion systems, which is beyond the traditional Kibble-Zurek mechanism.</li>
+			<li>26/07/2023-28/07/2023: &nbsp;I attended <a href="https://conferences.koushare.com/spcsc2023" target="_blank">the 7th National Conference on Statistical Physics and Complex Systems</a>, where I presented some of our <a href="../doc/v1.Driven Critical Dynamics in Gross-Neveu-Yukawa Universality Class.pdf" target="_blank"><b>results</b></a> of driven critical dynamics in Gross-Neveu-Yukawa universality class and discussed them with academic peers.</li>
+			<li style="margin-bottom: 30px;">22/07/2022-30/07/2022: &nbsp;I visited <a href="http://www.iop.cas.cn" target="_blank">Institute of Physics, Chinese Academy of Sciences</a>, to study the fermions quantum Monte Carlo algorithm and programs and discuss the progress of QMC simulation.</li>
 		</ul>
 		<h3>Research Notes</h3>
 		<ul>
