--- a/en/undergraduate.html
+++ b/en/undergraduate.html
@@ -33,7 +33,7 @@
 		</ul>
 		<h3>Academic Communication</h3>
 		<ul>
-			<li>11/04/2024-15/04/2024：I attended the 12th Workshop on Quantum Many-Body Computation</a>，and presented results of driven critical dynamics in Dirac fermion systems, which is beyond the traditional Kibble-Zurek mechanism.</li>
+			<li>11/04/2024-15/04/2024：I attended <a href="https://conferences.koushare.com/12thqmbc" target="_blank">the 12th Workshop on Quantum Many-Body Computation</a>，and presented results of driven critical dynamics in Dirac fermion systems, which is beyond the traditional Kibble-Zurek mechanism.</li>
 			<li>26/07/2023-28/07/2023: &nbsp;I attended <a href="https://conferences.koushare.com/spcsc2023" target="_blank">the 7th National Conference on Statistical Physics and Complex Systems</a>, where I presented some of our <a href="../doc/v1.Driven Critical Dynamics in Gross-Neveu-Yukawa Universality Class.pdf" target="_blank"><b>results</b></a> of driven critical dynamics in Gross-Neveu-Yukawa universality class and discussed them with academic peers.</li>
 			<li style="margin-bottom: 30px;">22/07/2022-30/07/2022: &nbsp;I visited <a href="http://www.iop.cas.cn" target="_blank">Institute of Physics, Chinese Academy of Sciences</a>, to study the fermions quantum Monte Carlo algorithm and programs and discuss the progress of QMC simulation.</li>
 		</ul>
