--- a/en/index.html
+++ b/en/index.html
@@ -38,9 +38,10 @@
 		<br>
 		<h2>Research Interests</h2>
 		<ul>
-			<li>quantum information, quantum computing</li>
+			<li>quantum algorithm, quantum optimization</li>
+			<li>quantum simulation, quantum control</li>
 			<li>quantum phase transition, nonequilibrium statistical physics</li>
-			<li>numerical simulation (quantum Monte Carlo) and quantum simulation in quantum many-body systems</li>
+			<li>quantum Monte Carlo</li>
 		</ul>
 		<br>
 		<h2>Education</h2>
