--- a/en/index.html
+++ b/en/index.html
@@ -29,7 +29,7 @@
     			<div style="float:right; width:400px; height:400px; ">
 				<img src="../img/2409Yunnan_edited.jpg" alt="" width="300" />
 			</div>
-        		<h1>Zhi Zeng</h1>
+        		<h1>Zhi Zeng (Eric Zeng, E.Z.)</h1>
 			<p>Email：zeng9245@gmail.com</p>
 			
 			
