--- a/cn/undergraduate.html
+++ b/cn/undergraduate.html
@@ -35,14 +35,15 @@
 		</ul>
 		<h3>学术交流</h3>
 		<ul>
-			<li>2024 年 4 月 11 日至 2024 年 4 月 15 日：参加第十一届量子多体计算会议</a>，展示了超越传统Kibble-Zurek下的狄拉克费米子系统的临界虚时驱动动力学结果，并与同行交流</li>
+			<li>2024 年 4 月 11 日至 2024 年 4 月 15 日：参加第十二届量子多体计算会议</a>，展示了超越传统Kibble-Zurek机制的狄拉克费米子系统的临界虚时驱动动力学<a href="../doc/QMBC_poster.pdf" target="_blank"><b>结果</b></a></li>
 			<li>2023 年 7 月 26 日至 2023 年 7 月 28 日：参加<a href="https://conferences.koushare.com/spcsc2023" target="_blank">第七届全国统计物理与复杂系统学术会议</a>，展示了GNY普适类的驱动动力学的<a href="../doc/v1.Driven Critical Dynamics in Gross-Neveu-Yukawa Universality Class.pdf" target="_blank"><b>部分结果</b></a>并与同行交流</li>
 			<li style="margin-bottom: 30px;">2022 年 7 月 22 日至 2022 年 7 月 30 日：访问<a href="http://www.iop.cas.cn" target="_blank">中国科学院物理研究所</a>，讨论程序和进展</li>
 		</ul>
 		<h3>科研笔记</h3>
 		<ul>
-			<li><a href="../doc/susy_QMC程序改进_曾植_update20231031.pdf" target="_blank"><b>susy_QMC程序改进</b></a>(updated on 2023/10/31)</li>
-			<li style="margin-bottom: 30px;"><a href="../doc/chiral_Heisenberg_QMC程序注解_曾植_update20230930.pdf" target="_blank"><b>chiral_Heisenberg_QMC程序注解</b></a>(updated on 2023/09/30)</li>
+			<li><a href="../doc/QMC for DSM-QSH-SC DQCP.pdf" target="_blank"><b>QMC for DSM-QSH-SC DQCP</b></a>(updated on 2024/09)</li>
+			<li><a href="../doc/susy_QMC程序改进_曾植_update20231031.pdf" target="_blank"><b>susy_QMC程序改进</b></a>(updated on 2023/10)</li>
+			<li style="margin-bottom: 30px;"><a href="../doc/chiral_Heisenberg_QMC程序注解_曾植_update20230930.pdf" target="_blank"><b>chiral_Heisenberg_QMC程序注解</b></a>(updated on 2023/09)</li>
 		</ul>
 		<h3>在读/已读科研书籍</h3>
 		<ul>
@@ -65,9 +66,9 @@
 		<h3>奖学金</h3>
 		<ul>
 			<li>2023年中山大学专项奖学金学术创新奖</li>
-			<li>2023年中山大学优秀学生奖学金三等奖</li>
-			<li>2022年中山大学优秀学生奖学金三等奖</li>
-			<li>2021年中山大学优秀学生奖学金三等奖</li>
+			<li>2023年中山大学优秀学生奖学金</li>
+			<li>2022年中山大学优秀学生奖学金</li>
+			<li>2021年中山大学优秀学生奖学金</li>
 			<li style="margin-bottom: 30px;">2021年中山大学专项奖学金文体艺术奖</li>
 		</ul>
 		<h3>项目</h3>
