--- a/cn/index.html
+++ b/cn/index.html
@@ -46,7 +46,7 @@
 		<br>
 		<h2>科研方向</h2>
 		<ul>
-			<li>量子算法，量子优化</li>
+			<li>量子算法，量子优化，量子线路</li>
 			<li>量子模拟，量子调控</li>
 			<li>量子相变，非平衡统计物理</li>
 			<li>量子蒙特卡洛</li>
