--- a/en/index.html
+++ b/en/index.html
@@ -38,7 +38,7 @@
 		<br>
 		<h2>Research Interests</h2>
 		<ul>
-			<li>quantum algorithm, quantum optimization</li>
+			<li>quantum algorithm, quantum optimization, quantum circuit</li>
 			<li>quantum simulation, quantum control</li>
 			<li>quantum phase transition, nonequilibrium statistical physics</li>
 			<li>quantum Monte Carlo</li>
