--- a/en/index.html
+++ b/en/index.html
@@ -17,7 +17,7 @@
 			<nav>
    	 		<ul>
    	     		<li><a href="../en/index.html">English</a></li>
-     	   		<li><a href="../cn/index.html">中文</a></li>
+     	   		<li><a href="../cn/index.html">Chinese</a></li>
     			</ul>
 			</nav>
 		</div>
@@ -38,10 +38,10 @@
 		<br>
 		<h2>Research Interests</h2>
 		<ul>
-			<li>quantum algorithm, quantum optimization, quantum circuit</li>
+			<li>quantum algorithm, quantum optimization, quantum error correction</li>
 			<li>quantum simulation, quantum control</li>
 			<li>quantum phase transition, nonequilibrium statistical physics</li>
-			<li>quantum Monte Carlo</li>
+			<li>numerical simulation methods like quantum Monte Carlo</li>
 		</ul>
 		<br>
 		<h2>Education</h2>
