--- a/en/postgraduate.html
+++ b/en/postgraduate.html
@@ -17,7 +17,7 @@
 			<nav>
    	 		<ul>
    	     		<li><a href="../en/postgraduate.html">English</a></li>
-     	   		<li><a href="../cn/postgraduate.html">中文</a></li>
+     	   		<li><a href="../cn/postgraduate.html">Chinese</a></li>
     			</ul>
 			</nav>
 		</div>
