--- a/en/postgraduate.html
+++ b/en/postgraduate.html
@@ -25,6 +25,11 @@
 		<script src="nav.js"></script>
 		<br>
 		<h1>Research</h1>
+		<h3>Courses</h3>
+		<ul>
+			<li>Quantum Information, Advanced Quantum Information, Quantum Optics, Cold Atomic Systems, Hybrid Quantum Systems, Mathematical Methods for Physicists, Quantum theory of Matter</li>
+			<li style="margin-bottom: 30px;">Research Computing Skills for Physicists, Self-Study Project, Research Project</li>
+		</ul>
 
 		<br>
 	</body>
