--- a/en/index.html
+++ b/en/index.html
@@ -38,10 +38,10 @@
 		<br>
 		<h2>Research Interests</h2>
 		<ul>
-			<li>quantum algorithm, quantum optimization, quantum error correction</li>
-			<li>quantum simulation, quantum control</li>
-			<li>quantum phase transition, nonequilibrium statistical physics</li>
-			<li>numerical simulation methods like quantum Monte Carlo</li>
+			<li>quantum algorithm, quantum optimization</li>
+			<li>quantum error correction</li>
+			<li>trapped ion / neutral atom quantum computing</li>
+			<li>nonequilibrium quantum phase transitions with quantum Monte Carlo</li>
 		</ul>
 		<br>
 		<h2>Education</h2>
