--- a/cn/index.html
+++ b/cn/index.html
@@ -46,10 +46,10 @@
 		<br>
 		<h2>科研方向</h2>
 		<ul>
-			<li>量子算法，量子优化</li>
+			<li>量子算法，量子优化，量子线路</li>
 			<li>量子纠错码</li>
 			<li>基于囚禁离子/中性原子平台的量子计算</li>
-			<li>非平衡量子相变，量子蒙特卡洛</li>
+			<li>量子机器学习</li>
 		</ul>
 		<br>
 		<h2>履历</h2>
