--- a/en/index.html
+++ b/en/index.html
@@ -38,7 +38,7 @@
 		<br>
 		<h2>Research Interests</h2>
 		<ul>
-			<li>quantum algorithm, quantum optimization, quantum circuits</li>
+			<li>quantum algorithm: quantum optimization, quantum circuits</li>
 			<li>quantum error correction, quantum error mitigation</li>
 			<li>trapped ion / neutral atom quantum computing</li>
 			<li>quantum machine learning</li>
