--- a/en/index.html
+++ b/en/index.html
@@ -40,7 +40,7 @@
 		<ul>
 			<li>quantum algorithm: quantum optimization, quantum circuits</li>
 			<li>quantum error correction, quantum error mitigation</li>
-			<li>trapped ion / neutral atom quantum computing</li>
+			<li>developing practical quantum hardware</li>
 			<li>quantum machine learning</li>
 		</ul>
 		<br>
