--- a/cn/index.html
+++ b/cn/index.html
@@ -46,9 +46,9 @@
 		<br>
 		<h2>科研方向</h2>
 		<ul>
-			<li>量子算法，量子优化，量子线路</li>
+			<li>量子算法：量子优化，量子线路</li>
 			<li>量子纠错码，量子错误缓解</li>
-			<li>基于囚禁离子/中性原子平台的量子计算</li>
+			<li>发展实用量子硬件</li>
 			<li>量子机器学习</li>
 		</ul>
 		<br>
