--- a/en/index.html
+++ b/en/index.html
@@ -27,9 +27,9 @@
 		<div class="container">
     		<div class="blurb">
     			<div style="float:right; width:400px; height:400px; ">
-				<img src="../img/2409Yunnan_edited.jpg" alt="" width="300" />
+				<img src="../img/2024_12bythesea.jpg" alt="" width="300" />
 			</div>
-        		<h1>Zhi Zeng (Eric Zeng, E.Z.)</h1>
+        		<h1>Zhi Zeng (Eric Zeng)</h1>
 			<p>Email：zeng9245@gmail.com</p>
 			
 			
