--- a/en/index.html
+++ b/en/index.html
@@ -38,9 +38,10 @@
 		<br>
 		<h2>Research Interests</h2>
 		<ul>
-			<li>quantum algorithm: quantum optimization, quantum circuits</li>
+			<li>quantum algorithms</li>
 			<li>quantum error correction, quantum error mitigation</li>
 			<li>developing practical quantum hardware</li>
+			<li>quantum simulation</li>
 			<li>quantum machine learning</li>
 		</ul>
 		<br>
