--- a/cn/index.html
+++ b/cn/index.html
@@ -35,7 +35,7 @@
 		<div class="container">
     		<div class="blurb">
     			<div style="float:right; width:400px; height:400px; ">
-				<img src="../img/2409Yunnan_edited.jpg" alt="" width="300" />
+				<img src="../img/2024_12bythesea.jpg" alt="" width="300" />
 			</div>
         		<h1>曾植</h1>
 			<p>电子邮箱：zeng9245@gmail.com</p>
@@ -46,9 +46,10 @@
 		<br>
 		<h2>科研方向</h2>
 		<ul>
-			<li>量子算法：量子优化，量子线路</li>
+			<li>量子算法</li>
 			<li>量子纠错码，量子错误缓解</li>
 			<li>发展实用量子硬件</li>
+			<li>量子模拟</li>
 			<li>量子机器学习</li>
 		</ul>
 		<br>
