--- a/en/undergraduate.html
+++ b/en/undergraduate.html
@@ -28,8 +28,8 @@
 		<h3>Research Experience</h3>
 		<ul>
 			<li>09/2023-07/2024: &nbsp;Research on nonequilibrium dynamics in superconducting quantum critical point with emergent spacetime supersymmetry</li>
-			<li>07/2021-07/2023: &nbsp;Research on imaginary-time driven critical dynamics in Honeycomb Hubbard model and spinless t-V model, whose criticalities belong to Gross-Neveu-Yukawa universality class</li>
-			<li style="margin-bottom: 30px;">07/2021-01/2023: &nbsp;Research on imaginary-time relaxation dynamics in Honeycomb Hubbard model, whose criticality belongs to chiral Heisenberg universality class</li>
+			<li>07/2021-07/2023: &nbsp;Research on imaginary-time driven critical dynamics in honeycomb Hubbard model and spinless t-V model, whose criticalities belong to Gross-Neveu-Yukawa universality class.</li>
+			<li style="margin-bottom: 30px;">07/2021-01/2023: &nbsp;Research on imaginary-time relaxation dynamics in honeycomb Hubbard model, whose criticality belongs to chiral Heisenberg universality class</li>
 		</ul>
 		<h3>Academic Communication</h3>
 		<ul>
@@ -39,6 +39,7 @@
 		</ul>
 		<h3>Research Notes</h3>
 		<ul>
+			<li><a href="../doc/QuenchHubbard源代码(2022.7.25) - 副本.zip" target="_blank"><b>DQMC codes for honeycomb Hubbard model</b></a> </li>
 			<li><a href="../doc/QMC for DSM-QSH-SC DQCP.pdf" target="_blank"><b>QMC for DSM-QSH-SC DQCP</b></a> (updated on 09/2024)</li>
 			<li><a href="../doc/susy_QMC程序改进_曾植_update20231031.pdf" target="_blank"><b>Changes to QMC Program on Supersymmetry</b></a> (updated on 10/2023)</li>
 			<li style="margin-bottom: 30px;"><a href="../doc/chiral_Heisenberg_QMC程序注解_曾植_update20230930.pdf" target="_blank"><b>Annotations to QMC Program on Chiral Heisenberg</b></a> (updated on 09/2023)</li>
