--- a/en/postgraduate.html
+++ b/en/postgraduate.html
@@ -24,11 +24,17 @@
 		<br>
 		<script src="nav.js"></script>
 		<br>
-		<h1>Research</h1>
-		<h3>Courses</h3>
+		<h1>Research Project</h1>
+		<h1>Self-Study Project</h1>
+		<ul>
+			<li><a href="../doc/Optimal_Control_of_Trapped_Ions.pdf" target="_blank"><b>Literature review (Optimal Control of Trapped Ions)</b></a> </li>
+			<li><a href="../doc/pre.pdf" target="_blank"><b>Slides for presentation</b></a></li>
+			<li style="margin-bottom: 30px;"><a href="../doc/chiral_Heisenberg_QMC程序注解_曾植_update20230930.pdf" target="_blank"><b>Annotations to QMC Program on Chiral Heisenberg</b></a> (updated on 09/2023)</li>
+		</ul>
+		<h1>RCS Mini Project (Research Computing Skills for Physicists)</h1>
+		<h1>Courses</h1>
 		<ul>
 			<li>Quantum Information, Advanced Quantum Information, Quantum Optics, Cold Atomic Systems, Hybrid Quantum Systems, Mathematical Methods for Physicists, Quantum theory of Matter</li>
-			<li style="margin-bottom: 30px;">Research Computing Skills for Physicists, Self-Study Project, Research Project</li>
 		</ul>
 
 		<br>
