--- a/en/postgraduate.html
+++ b/en/postgraduate.html
@@ -24,19 +24,23 @@
 		<br>
 		<script src="nav.js"></script>
 		<br>
-		<h1>Research Project</h1>
-		<h1>Self-Study Project</h1>
-		<ul>
-			<li><a href="../doc/Optimal_Control_of_Trapped_Ions.pdf" target="_blank"><b>Literature review (Optimal Control of Trapped Ions)</b></a> </li>
-			<li><a href="../doc/pre.pdf" target="_blank"><b>Slides for presentation</b></a></li>
-			<li style="margin-bottom: 30px;"><a href="../doc/chiral_Heisenberg_QMC程序注解_曾植_update20230930.pdf" target="_blank"><b>Annotations to QMC Program on Chiral Heisenberg</b></a> (updated on 09/2023)</li>
-		</ul>
-		<h1>RCS Mini Project (Research Computing Skills for Physicists)</h1>
 		<h1>Courses</h1>
+		<h3>Research Project</h3>
+		<h3>Self-Study Project</h3>
+		<ul>
+			<li><a href="../doc/Optimal_Control_of_Trapped_Ions.pdf" target="_blank"><b>Literature Review (Optimal Control of Trapped Ions)</b></a> </li>
+			<li style="margin-bottom: 30px;"><a href="../doc/pre.pdf" target="_blank"><b>Slides for Presentation</b></a></li>
+			</ul>
+		<h3>RCS Mini Project (Research Computing Skills for Physicists)</h3>
+		<h3>Lectures</h3>
 		<ul>
 			<li>Quantum Information, Advanced Quantum Information, Quantum Optics, Cold Atomic Systems, Hybrid Quantum Systems, Mathematical Methods for Physicists, Quantum theory of Matter</li>
 		</ul>
-
+		<h3>Notes</h3>
+		<ul>
+			<li><a href="../doc/theory for ion trap.pdf" target="_blank"><b>theory for ion trap</b></a></li>
+			<li style="margin-bottom: 30px;"><a href="../doc/experiment for ion trap.pdf" target="_blank"><b>experiment for ion trap</b></a></li>
+		</ul>
 		<br>
 	</body>
 </html>
