--- a/en/postgraduate.html
+++ b/en/postgraduate.html
@@ -28,13 +28,19 @@
 		<h3>Research Project</h3>
 		<h3>Self-Study Project</h3>
 		<ul>
-			<li><a href="../doc/Optimal_Control_of_Trapped_Ions.pdf" target="_blank"><b>Literature Review (Optimal Control of Trapped Ions)</b></a> </li>
-			<li style="margin-bottom: 30px;"><a href="../doc/pre.pdf" target="_blank"><b>Slides for Presentation</b></a></li>
-			</ul>
+			<li><a href="../doc/Optimal_Control_of_Trapped_Ions.pdf" target="_blank"><b>Literature review (optimal control of trapped ions)</b></a> </li>
+			<li style="margin-bottom: 30px;"><a href="../doc/pre.pdf" target="_blank"><b>Slides for presentation</b></a></li>
+		</ul>
 		<h3>RCS Mini Project (Research Computing Skills for Physicists)</h3>
 		<h3>Lectures</h3>
 		<ul>
-			<li>Quantum Information, Advanced Quantum Information, Quantum Optics, Cold Atomic Systems, Hybrid Quantum Systems, Mathematical Methods for Physicists, Quantum theory of Matter</li>
+			<li>Quantum Information</li>
+			<li>Advanced Quantum Information</li>
+			<li>Quantum Optics</li>
+			<li>Cold Atomic Systems</li>
+			<li>Hybrid Quantum Systems</li>
+			<li>Quantum theory of Matter</li>
+			<li style="margin-bottom: 30px;">Mathematical Methods for Physicists</li>
 		</ul>
 		<h3>Notes</h3>
 		<ul>
