--- a/en/index.html
+++ b/en/index.html
@@ -33,7 +33,9 @@
 			<p>Email：zeng9245@gmail.com</p>
 			<p>or ez824@ic.ac.uk</p>
 			
-		
+		<p>I am deeply interested in applying quantum mechanics to real-world problems, especially in quantum information science. I enjoy this field because it bridges theory and application while retaining its fundamental depth.
+In daily life, I love sports, traveling, and photography. When it comes to drinks, I especially enjoy pure tea and iced Americanos.</p>
+			
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<br>
