--- a/en/index.html
+++ b/en/index.html
@@ -32,7 +32,7 @@
         		<h1>Zhi Zeng (Eric Zeng)</h1>
 			<p>Email：zeng9245@gmail.com</p>
 			
-		<p>	I am deeply interested in applying quantum mechanics to real-world problems, especially in quantum information science. I enjoy this field because it bridges theory and application while retaining its fundamental depth.
+		<p>	I am deeply interested in applying quantum mechanics to real-world problems, especially in quantum information processing. I enjoy this field because it bridges theory and application while retaining its fundamental depth.
 
 			In daily life, I love sports, traveling, and photography. When it comes to drinks, I especially enjoy pure tea and iced Americanos.</p>
 			
