--- a/en/index.html
+++ b/en/index.html
@@ -33,7 +33,7 @@
 			<p>Email：zeng9245@gmail.com</p>
 			
 		<p style="text-indent: 2em;">
-    		I am deeply interested in applying quantum mechanics to real-world problems, 
+    		I am deeply interested in applications and foundations of quantum mechanics, 
     		especially in quantum information processing. I enjoy this field because it 
     		bridges theory and application while retaining its fundamental depth.
 		</p>
