--- a/en/index.html
+++ b/en/index.html
@@ -33,9 +33,8 @@
 			<p>Email：zeng9245@gmail.com</p>
 			
 		<p style="text-indent: 2em;">
-    		I am deeply interested in applications and foundations of quantum mechanics, 
-    		especially in quantum information processing. I enjoy this field because it 
-    		bridges theory and application while retaining its fundamental depth.
+    		Academically, I am deeply interested in applications and foundations of quantum mechanics, 
+    		especially in quantum information processing.
 		</p>
 
 		<p style="text-indent: 2em;">
