--- a/en/index.html
+++ b/en/index.html
@@ -31,13 +31,14 @@
 			</div>
         		<h1>Zhi Zeng (Eric Zeng)</h1>
 			<p>Email：zeng9245@gmail.com</p>
-			
-		<p style="text-indent: 2em;">
+
+		<!-- style="text-indent: 2em;" -->
+		<p>
     		Academically, I am deeply interested in applications and foundations of quantum mechanics, 
     		especially in quantum information processing.
 		</p>
 
-		<p style="text-indent: 2em;">
+		<p>
     		In daily life, I love sports, traveling, and photography. When it comes to drinks, 
     		I especially enjoy pure tea and iced Americanos.
 		</p>
