--- a/en/postgraduate.html
+++ b/en/postgraduate.html
@@ -6,7 +6,7 @@
 
 <html lang="en">
 	<head>
-		<title>Zhi Zeng's Personal Website - Postgraduate</title>
+		<title>Zhi Zeng's Personal Website - MSc</title>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" type="text/css" href="../css/main.css">
 		<!--[if !IE]>--><link rel="stylesheet" type="text/css" href="../css/not_IE.css"><!--<![endif]-->
@@ -31,7 +31,12 @@
 			<li><a href="../doc/Optimal_Control_of_Trapped_Ions.pdf" target="_blank"><b>Literature review (optimal control of trapped ions)</b></a> </li>
 			<li style="margin-bottom: 30px;"><a href="../doc/pre.pdf" target="_blank"><b>Slides for presentation</b></a></li>
 		</ul>
-		<h2>RCS Mini Project (Research Computing Skills for Physicists)</h2>
+		<h2>RCS Mini Project (Research Computing Skills Lecture: matlab and mathematica)</h2>
+		<ul>
+			<li><a href="../doc/Documentation.pdf" target="_blank"><b>Ferromagnetism in the Ising model using the Metropolis algorithm</b></a> </li>
+			<li><a href="../doc/MCMC_2DIsing.m" target="_blank"><b>matlab codes</b></a> </li>
+			<li style="margin-bottom: 30px;"><a href="../doc/python_codes_for_Ising_with_Metropolis.zip" target="_blank"><b>pythons codes</b></a></li>
+		</ul>
 		<h2>Lectures</h2>
 		<ul>
 			<li>Quantum Information</li>
