--- a/en/postgraduate.html
+++ b/en/postgraduate.html
@@ -35,7 +35,7 @@
 		<ul>
 			<li><a href="../doc/Documentation.pdf" target="_blank"><b>Ferromagnetism in the Ising model using the Metropolis algorithm</b></a> </li>
 			<li><a href="../doc/MCMC_2DIsing.m" target="_blank"><b>matlab codes</b></a> </li>
-			<li style="margin-bottom: 30px;"><a href="../doc/python_codes_for_Ising_with_Metropolis.zip" target="_blank"><b>pythons codes</b></a></li>
+			<li style="margin-bottom: 30px;"><a href="../doc/python_codes_for_Ising_with_Metropolis.zip" target="_blank"><b>python codes</b></a></li>
 		</ul>
 		<h2>Lectures</h2>
 		<ul>
