Update and rename en/postgraduate.html to MSc.html

--- a/MSc.html
+++ b/MSc.html
@@ -16,8 +16,8 @@
 		<div align="right">
 			<nav>
    	 		<ul>
-   	     		<li><a href="../en/postgraduate.html">English</a></li>
-     	   		<li><a href="../cn/postgraduate.html">Chinese</a></li>
+   	     		<li><a href="../en/MSc.html">English</a></li>
+     	   		<li><a href="../cn/MSc.html">Chinese</a></li>
     			</ul>
 			</nav>
 		</div>
