--- a/en/BSc.html
+++ b/en/BSc.html
@@ -16,8 +16,8 @@
 		<div align="right">
 			<nav>
    	 		<ul>
-   	     		<li><a href="../en/undergraduate.html">English</a></li>
-     	   		<li><a href="../cn/undergraduate.html">Chinese</a></li>
+   	     		<li><a href="../en/BSc.html">English</a></li>
+     	   		<li><a href="../cn/BSc.html">Chinese</a></li>
     			</ul>
 			</nav>
 		</div>
