--- a/cn/postgraduate.html
+++ b/cn/postgraduate.html
@@ -6,7 +6,7 @@
 
 <html lang="cn">
 	<head>
-		<title>曾植的个人网站 - 研究生</title>
+		<title>曾植的个人网站 - 硕士</title>
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" type="text/css" href="../css/main.css">
 		<!--[if !IE]>--><link rel="stylesheet" type="text/css" href="../css/not_IE.css"><!--<![endif]-->
@@ -16,8 +16,8 @@
 		<div align="right">
 			<nav>
    	 		<ul>
-     	   		<li><a href="../cn/postgraduate.html">中文</a></li>
-			<li><a href="../en/postgraduate.html">English</a></li>
+     	   		<li><a href="../cn/MSc.html">中文</a></li>
+			<li><a href="../en/MSc.html">English</a></li>
     			</ul>
 			</nav>
 		</div>
