Update and rename undergraduate.html to BSc.html

--- a/cn/BSc.html
+++ b/cn/BSc.html
@@ -16,8 +16,8 @@
 		<div align="right">
 			<nav>
    	 		<ul>
-     	   		<li><a href="../cn/undergraduate.html">中文</a></li>
-			<li><a href="../en/undergraduate.html">English</a></li>
+     	   		<li><a href="../cn/BSc.html">中文</a></li>
+			<li><a href="../en/BSc.html">English</a></li>
     			</ul>
 			</nav>
 		</div>
