--- a/en/BSc.html
+++ b/en/BSc.html
@@ -37,9 +37,13 @@
 			<li>26/07/2023-28/07/2023: &nbsp;I attended <a href="https://conferences.koushare.com/spcsc2023" target="_blank">the 7th National Conference on Statistical Physics and Complex Systems</a>, where I presented some of <a href="../doc/v1.Driven Critical Dynamics in Gross-Neveu-Yukawa Universality Class.pdf" target="_blank"><b>results</b></a> of driven critical dynamics in Gross-Neveu-Yukawa criticality and discussed them with academic peers.</li>
 			<li style="margin-bottom: 30px;">22/07/2022-30/07/2022: &nbsp;I visited <a href="http://www.iop.cas.cn" target="_blank">Institute of Physics, Chinese Academy of Sciences</a>, to study the fermions quantum Monte Carlo algorithm and programs and discuss the progress of QMC simulation.</li>
 		</ul>
+		<h3>Codes</h3>
+		<ul>
+			<li><a href="../doc/QuenchHubbard源代码(2022.7.25) - 副本.zip" target="_blank"><b>DQMC codes</b></a> for square lattice Hubbard model (chiral XY)</li>
+			<li style="margin-bottom: 30px;"><a href="../doc/QuenchHubbard源代码(2022.7.25) - 副本.zip" target="_blank"><b>DQMC codes</b></a> for honeycomb lattice Hubbard model (chiral Heisenberg)</li>
+		</ul>	
 		<h3>Research Notes</h3>
 		<ul>
-			<li><a href="../doc/QuenchHubbard源代码(2022.7.25) - 副本.zip" target="_blank"><b>DQMC codes</b></a> for honeycomb Hubbard model</li>
 			<li><a href="../doc/QMC for DSM-QSH-SC DQCP.pdf" target="_blank"><b>QMC for DSM-QSH-SC DQCP</b></a> (updated on 09/2024)</li>
 			<li><a href="../doc/susy_QMC程序改进_曾植_update20231031.pdf" target="_blank"><b>Changes to QMC Program on Supersymmetry</b></a> (updated on 10/2023)</li>
 			<li style="margin-bottom: 30px;"><a href="../doc/chiral_Heisenberg_QMC程序注解_曾植_update20230930.pdf" target="_blank"><b>Annotations to QMC Program on chiral Heisenberg</b></a> (updated on 09/2023)</li>
