--- a/en/BSc.html
+++ b/en/BSc.html
@@ -17,7 +17,7 @@
 			<nav>
    	 		<ul>
    	     		<li><a href="../en/BSc.html">English</a></li>
-     	   		<li><a href="../cn/BSc.html">Chinese</a></li>
+     	   		<!--<li><a href="../cn/BSc.html">Chinese</a></li>>
     			</ul>
 			</nav>
 		</div>
@@ -39,7 +39,7 @@
 		</ul>
 		<h3>Codes</h3>
 		<ul>
-			<li><a href="../doc/QuenchHubbard源代码(2022.7.25) - 副本.zip" target="_blank"><b>DQMC codes</b></a> for square lattice Hubbard model (chiral XY)</li>
+			<li><a href="../doc/neqcode_susy_new.zip" target="_blank"><b>DQMC codes</b></a> for square lattice Hubbard model (chiral XY)</li>
 			<li style="margin-bottom: 30px;"><a href="../doc/QuenchHubbard源代码(2022.7.25) - 副本.zip" target="_blank"><b>DQMC codes</b></a> for honeycomb lattice Hubbard model (chiral Heisenberg)</li>
 		</ul>	
 		<h3>Research Notes</h3>
