--- a/en/index.html
+++ b/en/index.html
@@ -17,7 +17,7 @@
 			<nav>
    	 		<ul>
    	     		<li><a href="../en/index.html">English</a></li>
-     	   		<li><a href="../cn/index.html">Chinese</a></li>
+     	   		<!--<li><a href="../cn/index.html">Chinese</a></li>>
     			</ul>
 			</nav>
 		</div>
