--- a/en/BSc.html
+++ b/en/BSc.html
@@ -17,7 +17,7 @@
 			<nav>
    	 		<ul>
    	     		<li><a href="../en/BSc.html">English</a></li>
-     	   		<!--<li><a href="../cn/BSc.html">Chinese</a></li>>
+     	   		<!--<li><a href="../cn/BSc.html">Chinese</a></li>-->
     			</ul>
 			</nav>
 		</div>
