--- a/en/MSc.html
+++ b/en/MSc.html
@@ -17,7 +17,7 @@
 			<nav>
    	 		<ul>
    	     		<li><a href="../en/MSc.html">English</a></li>
-     	   		<li><a href="../cn/MSc.html">Chinese</a></li>
+     	   		<!--<li><a href="../cn/MSc.html">Chinese</a></li>-->
     			</ul>
 			</nav>
 		</div>
