--- a/en/MSc.html
+++ b/en/MSc.html
@@ -37,6 +37,11 @@
 			<li><a href="../doc/MCMC_2DIsing.m" target="_blank"><b>matlab codes</b></a> </li>
 			<li style="margin-bottom: 30px;"><a href="../doc/python_codes_for_Ising_with_Metropolis.zip" target="_blank"><b>python codes</b></a></li>
 		</ul>
+		<h2>Small Lab projects</h2>
+		<ul>
+			<li>MOT lab: Perform spectroscopy of Rb atoms, and use this setup to control the frequency of the laser. Then use this laser to make a magneto-optical trap containing ultracold Rb. Apparatus includes: 780-nm external cavity diode laser, glass Rb cell, vacuum pump, magnetic-field coils, various optics and detectors.</li>
+			<li style="margin-bottom: 30px;">Simulation lab: QuTiP is an open-source code library written in Python to simulate the dynamics of open quantum systems. Over the last few years, this has become a widely used tool for groups ranging from university researchers studying fundamental quantum systems to teams in industry developing quantum technologies. In this lab, you will gain working knowledge of QuTiP and use it to simulate the dynamics of quantum oscillators and cavity-QED systems.</li>
+		</ul>
 		<h2>Lectures</h2>
 		<ul>
 			<li>Quantum Information</li>
