--- a/en/MSc.html
+++ b/en/MSc.html
@@ -26,6 +26,9 @@
 		<br>
 		<h1>Courses</h1>
 		<h2>Research Project</h2>
+		<ul>
+			<li style="margin-bottom: 30px;">Reshaping quantum device noise via quantum error correction on trapped ion processor.</li>
+		</ul>
 		<h2>Self-Study Project</h2>
 		<ul>
 			<li><a href="../doc/Optimal_Control_of_Trapped_Ions.pdf" target="_blank"><b>Literature review (optimal control of trapped ions)</b></a> </li>
@@ -39,8 +42,8 @@
 		</ul>
 		<h2>Small Lab projects</h2>
 		<ul>
-			<li>MOT lab: Perform spectroscopy of Rb atoms, and use this setup to control the frequency of the laser. Then use this laser to make a magneto-optical trap containing ultracold Rb. Apparatus includes: 780-nm external cavity diode laser, glass Rb cell, vacuum pump, magnetic-field coils, various optics and detectors.</li>
-			<li style="margin-bottom: 30px;">Simulation lab: QuTiP is an open-source code library written in Python to simulate the dynamics of open quantum systems. Over the last few years, this has become a widely used tool for groups ranging from university researchers studying fundamental quantum systems to teams in industry developing quantum technologies. In this lab, you will gain working knowledge of QuTiP and use it to simulate the dynamics of quantum oscillators and cavity-QED systems.</li>
+			<li>MOT lab: Perform spectroscopy of Rb atoms, and use this setup to control the frequency of the laser. Then use this laser to make a magneto-optical trap containing ultracold Rb.</li>
+			<li style="margin-bottom: 30px;">Simulation lab: Gain working knowledge of QuTiP and use it to simulate the dynamics of quantum oscillators and cavity-QED systems. (QuTiP is an open-source code library written in Python to simulate the dynamics of open quantum systems. Over the last few years, this has become a widely used tool for groups ranging from university researchers studying fundamental quantum systems to teams in industry developing quantum technologies.)</li>
 		</ul>
 		<h2>Lectures</h2>
 		<ul>
