--- a/en/MSc.html
+++ b/en/MSc.html
@@ -27,7 +27,7 @@
 		<h1>Courses</h1>
 		<h2>Research Project</h2>
 		<ul>
-			<li style="margin-bottom: 30px;">New Applications of Quantum Error Correction on Trapped-ion Systems</li>
+			<li style="margin-bottom: 30px;">New Usages of Repetition Codes on Trapped-ion Systems</li>
 		</ul>
 		<h2>Self-Study Project</h2>
 		<ul>
