--- a/en/index.html
+++ b/en/index.html
@@ -34,7 +34,7 @@
 
 		<!-- style="text-indent: 2em;" -->
 		<p>
-    		Academically, I am deeply interested in applications and foundations of quantum mechanics, 
+    		Academically, I am deeply interested in applications of quantum mechanics, 
     		especially in quantum information processing.
 		</p>
 
@@ -48,9 +48,8 @@
 		<br>
 		<h2>Research Interests</h2>
 		<ul>
-			<li>quantum algorithms</li>
-			<li>quantum error correction, quantum error mitigation</li>
 			<li>developing practical quantum hardware</li>
+			<li>quantum error correction</li>
 			<li>quantum simulation</li>
 			<li>quantum machine learning</li>
 		</ul>
@@ -72,8 +71,8 @@
 		<!--<h2>Publications (<a href="https://inspirehep.net/literature?sort=mostrecent&size=25&page=1&q=ea%20yu%2C%20zhao-huan&ui-citation-summary=true" target="_blank">INSPIRE-HEP link</a>)</h2>-->
 		<h2>Publications/Preprints</h2>
 		<ul>
-			<li><b>Zhi Zeng</b>, Yin-Kai Yu,  Zi-Xiang Li, Shuai Yin. Nonequilibrium Critical Dynamics with Emergent Supersymmetry 2024. <a href="https://arxiv.org/abs/2408.06138" target="_blank">arXiv: 2408.06138</a>.</li>
-			<li><b>Zhi Zeng</b>, Yin-Kai Yu, Zhi-Xuan Li, Zi-Xiang Li, Shuai Yin. Finite-time Scaling beyond the Kibble-Zurek Prerequisite: Driven Critical Dynamics in Strongly Interacting Dirac Systems. 2024. <a href="https://arxiv.org/abs/2403.19258" target="_blank">arXiv: 2403.19258</a>.</li>
+			<li><b>Zhi Zeng</b>, Yin-Kai Yu, Zi-Xiang Li, Shuai Yin. Nonequilibrium critical dynamics with emergent supersymmetry. \textit{Phys. Rev. B} \textbf{112}, L060301 (2025). <a href="https://doi.org/10.1103/qtwr-8kth" target="_blank">doi:10.1103/qtwr-8kth</a>.</li>
+			<li><b>Zhi Zeng</b>, Yin-Kai Yu, Zhi-Xuan Li, Zi-Xiang Li, Shuai Yin. Finite-time Scaling beyond the Kibble-Zurek Prerequisite in Dirac Systems. \textit{Nature Communications} \textbf{16}, 6625 (2025). <a href="https://doi.org/10.1038/s41467-025-61611-6" target="_blank">doi:10.1038/s41467-025-61611-6</a>.</li>
 			<li>Yin-Kai Yu, <b>Zhi Zeng</b>, Yu-Rong Shu, Zi-Xiang Li, Shuai Yin. Nonequilibrium dynamics in Dirac quantum criticality. 2023. <a href="https://arxiv.org/abs/2310.10601" target="_blank">arXiv: 2310.10601</a>.</li>
 		</ul>
 		<ol>
