--- a/en/index.html
+++ b/en/index.html
@@ -39,7 +39,7 @@
 		</p>
 
 		<p>
-    		In daily life, I love sports, traveling, and photography. When it comes to drinks, 
+    		In daily life, I love sports. For drinks,
     		I especially enjoy pure tea and iced Americanos.
 		</p>
 			
