--- a/en/MSc.html
+++ b/en/MSc.html
@@ -25,13 +25,14 @@
 		<script src="nav.js"></script>
 		<br>
 		<h1>Courses</h1>
-		<h2>Research Project</h2>
+		<h2>Research Project: Noise as a Resource for Simulating Open Quantum Dynamics in Trapped-Ion Quantum Processor</h2>
 		<ul>
-			<li style="margin-bottom: 30px;">New Usages of Repetition Codes on Trapped-ion Systems</li>
+			<li>Report</li>
+			<li style="margin-bottom: 30px;"><a href="../doc/poster_MSc.pdf" target="_blank"><b>Poster for presentation</b></a></li>
 		</ul>
-		<h2>Self-Study Project</h2>
+		<h2>Self-Study Project: Optimal Control of Trapped Ions</h2>
 		<ul>
-			<li><a href="../doc/Optimal_Control_of_Trapped_Ions.pdf" target="_blank"><b>Literature review (optimal control of trapped ions)</b></a> </li>
+			<li><a href="../doc/Optimal_Control_of_Trapped_Ions.pdf" target="_blank"><b>Literature review</b></a> </li>
 			<li style="margin-bottom: 30px;"><a href="../doc/pre.pdf" target="_blank"><b>Slides for presentation</b></a></li>
 		</ul>
 		<h2>RCS Mini Project (Research Computing Skills Lecture: matlab and mathematica)</h2>
