--- a/en/index.html
+++ b/en/index.html
@@ -27,7 +27,7 @@
 		<div class="container">
     		<div class="blurb">
     			<div style="float:right; width:500px; height:500px; ">
-				<img src="../img/2024_12bythesea.jpg" alt="" width="400" />
+				<img src="../img/2506Venice.jpg" alt="" width="400" />
 			</div>
         		<h1>Zhi Zeng (Eric Zeng)</h1>
 			<p>Email：zeng9245@gmail.com</p>
