--- a/en/index.html
+++ b/en/index.html
@@ -27,7 +27,7 @@
 		<div class="container">
     		<div class="blurb">
     			<div style="float:right; width:500px; height:500px; ">
-				<img src="../img/2506Venice.jpg" alt="" width="400" />
+				<img src="../img/2506Venice.jpg" alt="" width="300" />
 			</div>
         		<h1>Zhi Zeng (Eric Zeng)</h1>
 			<p>Email：zeng9245@gmail.com</p>
@@ -71,8 +71,8 @@
 		<!--<h2>Publications (<a href="https://inspirehep.net/literature?sort=mostrecent&size=25&page=1&q=ea%20yu%2C%20zhao-huan&ui-citation-summary=true" target="_blank">INSPIRE-HEP link</a>)</h2>-->
 		<h2>Publications/Preprints</h2>
 		<ul>
-			<li><b>Zhi Zeng</b>, Yin-Kai Yu, Zi-Xiang Li, Shuai Yin. Nonequilibrium critical dynamics with emergent supersymmetry. \textit{Phys. Rev. B} \textbf{112}, L060301 (2025). <a href="https://doi.org/10.1103/qtwr-8kth" target="_blank">doi:10.1103/qtwr-8kth</a>.</li>
-			<li><b>Zhi Zeng</b>, Yin-Kai Yu, Zhi-Xuan Li, Zi-Xiang Li, Shuai Yin. Finite-time Scaling beyond the Kibble-Zurek Prerequisite in Dirac Systems. \textit{Nature Communications} \textbf{16}, 6625 (2025). <a href="https://doi.org/10.1038/s41467-025-61611-6" target="_blank">doi:10.1038/s41467-025-61611-6</a>.</li>
+			<li><b>Zhi Zeng</b>, Yin-Kai Yu, Zi-Xiang Li, Shuai Yin. Nonequilibrium critical dynamics with emergent supersymmetry. <i>Physical Review B</i> <b>112</b>, L060301 (2025). <a href="https://doi.org/10.1103/qtwr-8kth" target="_blank">doi:10.1103/qtwr-8kth</a>.</li>
+			<li><b>Zhi Zeng</b>, Yin-Kai Yu, Zhi-Xuan Li, Zi-Xiang Li, Shuai Yin. Finite-time Scaling beyond the Kibble-Zurek Prerequisite in Dirac Systems. <i>Nature Communications</i> <b>16</b>, 6625 (2025). <a href="https://doi.org/10.1038/s41467-025-61611-6" target="_blank">doi:10.1038/s41467-025-61611-6</a>.</li>
 			<li>Yin-Kai Yu, <b>Zhi Zeng</b>, Yu-Rong Shu, Zi-Xiang Li, Shuai Yin. Nonequilibrium dynamics in Dirac quantum criticality. 2023. <a href="https://arxiv.org/abs/2310.10601" target="_blank">arXiv: 2310.10601</a>.</li>
 		</ul>
 		<ol>
