--- a/en/index.html
+++ b/en/index.html
@@ -26,7 +26,7 @@
 		<br>
 		<div class="container">
     		<div class="blurb">
-    			<div style="float:right; width:500px; height:500px; ">
+    			<div style="float:right; width:500px; height:500px; margin-right:50px;">
 				<img src="../img/2506Venice.jpg" alt="" width="300" />
 			</div>
         		<h1>Zhi Zeng (Eric Zeng)</h1>
