--- a/en/index.html
+++ b/en/index.html
@@ -31,6 +31,7 @@
 			</div>
         		<h1>Zhi Zeng (Eric Zeng)</h1>
 			<p>Email：zeng9245@gmail.com</p>
+			<p><a href="https://scholar.google.com/citations?hl=zh-CN&user=GSc-xIkAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Google Scholar</a></p>
 
 		<!-- style="text-indent: 2em;" -->
 		<p>
