--- a/en/index.html
+++ b/en/index.html
@@ -36,7 +36,7 @@
 		<!-- style="text-indent: 2em;" -->
 		<p>
     		Academically, I am deeply interested in applications of quantum mechanics, 
-    		especially in quantum information processing.
+    		especially in quantum computing.
 		</p>
 
 		<p>
