--- a/en/MSc.html
+++ b/en/MSc.html
@@ -25,7 +25,7 @@
 		<script src="nav.js"></script>
 		<br>
 		<h1>Courses</h1>
-		<h2>Research Project: Noise as a Resource for Simulating Open Quantum Dynamics in Trapped-Ion Quantum Processor</h2>
+		<h2>Research Project: Noise as a Computational Resource for Simulating Open Quantum Dynamics</h2>
 		<ul>
 			<li>Report</li>
 			<li style="margin-bottom: 30px;"><a href="../doc/poster_MSc.pdf" target="_blank"><b>Poster for presentation</b></a></li>
