--- a/en/index.html
+++ b/en/index.html
@@ -26,21 +26,17 @@
 		<br>
 		<div class="container">
     		<div class="blurb">
-    			<div style="float:right; width:500px; height:500px; margin-right:50px;">
+    			<div style="float:right; width:300px; height:500px; ">
 				<img src="../img/2506Venice.jpg" alt="" width="300" />
 			</div>
         		<h1>Zhi Zeng (Eric Zeng)</h1>
-			<p>Email：zeng9245@gmail.com</p>
 			<p><a href="https://scholar.google.com/citations?hl=zh-CN&user=GSc-xIkAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Google Scholar</a></p>
+			<p>Email：zeng9245@gmail.com</p>
 
 		<!-- style="text-indent: 2em;" -->
 		<p>
     		Academically, I am deeply interested in applications of quantum mechanics, 
-    		especially in quantum computing.
-		</p>
-
-		<p>
-    		In daily life, I love sports. For drinks,
+    		especially in quantum computing. In daily life, I love sports. For drinks,
     		I especially enjoy pure tea and iced Americanos.
 		</p>
 			
@@ -51,6 +47,7 @@
 		<ul>
 			<li>developing practical quantum hardware</li>
 			<li>quantum error correction</li>
+			<li>quantum algorithms</li>
 			<li>quantum simulation</li>
 			<li>quantum machine learning</li>
 		</ul>
