--- a/en/MSc.html
+++ b/en/MSc.html
@@ -27,7 +27,7 @@
 		<h1>Courses</h1>
 		<h2>Research Project:  Noise as a Computational Resource for Simulating Open Quantum Dynamics</h2>
 		<ul>
-			<li>Report</li>
+			<li>Thesis</li>
 			<li style="margin-bottom: 30px;"><a href="../doc/poster_MSc.pdf" target="_blank"><b>Poster for presentation</b></a></li>
 		</ul>
 		<h2>Self-Study Project:  Optimal Control of Trapped Ions</h2>
