--- a/en/index.html
+++ b/en/index.html
@@ -46,8 +46,8 @@
 		<h2>Research Interests</h2>
 		<ul>
 			<li>developing practical quantum hardware</li>
+			<li>quantum control and quantum architecture</li>
 			<li>quantum error correction</li>
-			<li>quantum algorithms</li>
 			<li>quantum simulation</li>
 			<li>quantum machine learning</li>
 		</ul>
