--- a/en/index.html
+++ b/en/index.html
@@ -45,7 +45,7 @@
 		<br>
 		<h2>Research Interests</h2>
 		<ul>
-			<li>developing practical quantum hardware</li>
+			<li>developing practical quantum device</li>
 			<li>quantum control and quantum architecture</li>
 			<li>quantum error correction</li>
 			<li>quantum simulation</li>
