--- a/en/MSc.html
+++ b/en/MSc.html
@@ -27,7 +27,7 @@
 		<h1>Courses</h1>
 		<h2>Research Project:&nbsp;&nbsp;Noise as a Computational Resource for Simulating Open Quantum Dynamics</h2>
 		<ul>
-			<li>Thesis</li>
+			<li><a href="../doc/qubit_motion_entanglement_in_MS_gate.pdf" target="_blank"><b>Thesis: The study on qubit-motion entanglement in the Mølmer-Sørensen gate</b></a></li>
 			<li style="margin-bottom: 30px;"><a href="../doc/poster_MSc.pdf" target="_blank"><b>Poster for presentation</b></a></li>
 		</ul>
 		<h2>Self-Study Project:&nbsp;&nbsp;Optimal Control of Trapped Ions</h2>
