--- a/en/MSc.html
+++ b/en/MSc.html
@@ -58,8 +58,10 @@
 		</ul>
 		<h2>Notes</h2>
 		<ul>
-			<li><a href="../doc/theory for ion trap.pdf" target="_blank"><b>theory for ion trap</b></a></li>
-			<li style="margin-bottom: 30px;"><a href="../doc/experiment for ion trap.pdf" target="_blank"><b>experiment for ion trap</b></a></li>
+			<li>theoretical derivation in research project</li>
+			<li>MS Hamiltonian and gate dynamics</li>
+			<li>theory for ion trap</li>
+			<li style="margin-bottom: 30px;">experiment for ion trap</li>
 		</ul>
 		<br>
 	</body>
