--- a/en/MSc.html
+++ b/en/MSc.html
@@ -44,7 +44,7 @@
 		<h2>Small Lab projects</h2>
 		<ul>
 			<li>MOT lab: Perform spectroscopy of Rb atoms, and use this setup to control the frequency of the laser. Then use this laser to make a magneto-optical trap containing ultracold Rb.</li>
-			<li style="margin-bottom: 30px;">Simulation lab: Gain working knowledge of QuTiP and use it to simulate the dynamics of quantum oscillators and cavity-QED systems. (QuTiP is an open-source code library written in Python to simulate the dynamics of open quantum systems. Over the last few years, this has become a widely used tool for groups ranging from university researchers studying fundamental quantum systems to teams in industry developing quantum technologies.)</li>
+			<li style="margin-bottom: 30px;">Simulation lab: Gain working knowledge of QuTiP (an open-source code library written in Python to simulate the dynamics of open quantum systems) and use it to simulate the dynamics of quantum oscillators and cavity-QED systems.</li>
 		</ul>
 		<h2>Lectures</h2>
 		<ul>
